By Peter sam walten

--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:11 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Wivana</title>
+    <title>About Us - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -51,7 +50,7 @@
         <div class="container-lg d-flex">
           <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
             <img
-              src="img/wivana-logo-dark.png"
+              src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
               width="166"
               height="41"
@@ -249,7 +248,7 @@
                 </div>
               </div>
               <span class="text-grey"
-                >At Wivana, we embrace authentic Ayurveda to nurture holistic
+                >At Key Remedies, we embrace authentic Ayurveda to nurture holistic
                 wellness, empowering you to find balance and rejuvenation in
                 life</span
               >
@@ -304,7 +303,7 @@
               <img src="icon/testimonial-icon.png" alt="testimonial quote" />
             </div>
             <p class="fs-22 lato c-silver text-center ceo-quote">
-              At Wivana, we're dedicated to helping you achieve balance,
+              At Key Remedies, we're dedicated to helping you achieve balance,
               healing, and peace through personalized Ayurvedic care for mind,
               body, and spirit
             </p>
@@ -318,7 +317,7 @@
               />
             </div>
             <p class="fs-16 lato c-silver text-center mt-2 mt-md-4">
-              CEO of Wivana
+              CEO of Key Remedies
             </p>
           </div>
         </div>
@@ -629,8 +628,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -826,5 +825,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:12 GMT -->
 </html>
