--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:12 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - Wivana</title>
+    <title>Contact Us - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -51,7 +50,7 @@
         <div class="container-lg d-flex">
           <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
             <img
-              src="img/wivana-logo-dark.png"
+              src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
               width="166"
               height="41"
@@ -215,7 +214,7 @@
                   <span class="ms-2 philosopher fs-14 c-white">CONTACT US</span>
                 </div>
                 <div class="title-about mt-1 mb-4 c-white">
-                  Get in Touch With Wivana
+                  Get in Touch With Key Remedies
                 </div>
                 <p class="text-silver">
                   Contact us today to start your journey towards holistic
@@ -366,7 +365,7 @@
                   Frequently Asked Questions
                 </div>
               </div>
-              <div class="accordion mt-5" id="wivanaAccordion">
+              <div class="accordion mt-5" id="Key RemediesAccordion">
                 <div class="accordion-item">
                   <span class="accordion-header" id="headingOne">
                     <button
@@ -377,17 +376,17 @@
                       aria-expanded="true"
                       aria-controls="collapseOne"
                     >
-                      What is Wivana’s approach to wellness?
+                      What is Key Remedies’s approach to wellness?
                     </button>
                   </span>
                   <div
                     id="collapseOne"
                     class="accordion-collapse collapse show"
                     aria-labelledby="headingOne"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
-                      Wivana embraces the ancient principles of Ayurveda,
+                      Key Remedies embraces the ancient principles of Ayurveda,
                       offering personalized treatments that balance the mind,
                       body, and spirit through natural remedies and holistic
                       practices.
@@ -405,17 +404,17 @@
                       aria-expanded="false"
                       aria-controls="collapseTwo"
                     >
-                      What services does Wivana offer?
+                      What services does Key Remedies offer?
                     </button>
                   </span>
                   <div
                     id="collapseTwo"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingTwo"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
-                      Wivana offers a range of services including Abhyanga
+                      Key Remedies offers a range of services including Abhyanga
                       massage, Shirodhara therapy, Panchakarma detox programs,
                       Ayurvedic facials, and wellness consultations, all
                       designed to promote overall health.
@@ -440,7 +439,7 @@
                     id="collapseThree"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingThree"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       Yes, we recommend a consultation prior to your first
@@ -461,14 +460,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFour"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseFour"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFour"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -488,14 +487,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFive"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseFive"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFive"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -515,14 +514,14 @@
                       aria-expanded="false"
                       aria-controls="collapseSix"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseSix"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingSix"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -547,8 +546,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -744,5 +743,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:13 GMT -->
 </html>
