--- a/faqs.html
+++ b/faqs.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:21 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FAQS - Wivana</title>
+    <title>FAQS - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -53,7 +52,7 @@
         <div class="container-lg d-flex">
           <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
             <img
-              src="img/wivana-logo-dark.png"
+              src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
               width="166"
               height="41"
@@ -224,7 +223,7 @@
                   Frequently Asked Questions
                 </div>
               </div>
-              <div class="accordion mt-5" id="wivanaAccordion1">
+              <div class="accordion mt-5" id="Key RemediesAccordion1">
                 <div class="accordion-item">
                   <span class="accordion-header" id="headingOne1">
                     <button
@@ -235,17 +234,17 @@
                       aria-expanded="true"
                       aria-controls="collapseOne1"
                     >
-                      What is Wivana’s approach to wellness?
+                      What is Key Remedies’s approach to wellness?
                     </button>
                   </span>
                   <div
                     id="collapseOne1"
                     class="accordion-collapse collapse show"
                     aria-labelledby="headingOne1"
-                    data-bs-parent="#wivanaAccordion1"
+                    data-bs-parent="#Key RemediesAccordion1"
                   >
                     <div class="accordion-body">
-                      Wivana embraces the ancient principles of Ayurveda,
+                      Key Remedies embraces the ancient principles of Ayurveda,
                       offering personalized treatments that balance the mind,
                       body, and spirit through natural remedies and holistic
                       practices.
@@ -263,17 +262,17 @@
                       aria-expanded="false"
                       aria-controls="collapseTwo1"
                     >
-                      What services does Wivana offer?
+                      What services does Key Remedies offer?
                     </button>
                   </span>
                   <div
                     id="collapseTwo1"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingTwo1"
-                    data-bs-parent="#wivanaAccordion1"
+                    data-bs-parent="#Key RemediesAccordion1"
                   >
                     <div class="accordion-body">
-                      Wivana offers a range of services including Abhyanga
+                      Key Remedies offers a range of services including Abhyanga
                       massage, Shirodhara therapy, Panchakarma detox programs,
                       Ayurvedic facials, and wellness consultations, all
                       designed to promote overall health.
@@ -298,7 +297,7 @@
                     id="collapseThree1"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingThree1"
-                    data-bs-parent="#wivanaAccordion1"
+                    data-bs-parent="#Key RemediesAccordion1"
                   >
                     <div class="accordion-body">
                       Yes, we recommend a consultation prior to your first
@@ -326,7 +325,7 @@
                     id="collapseFour1"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFour1"
-                    data-bs-parent="#wivanaAccordion1"
+                    data-bs-parent="#Key RemediesAccordion1"
                   >
                     <div class="accordion-body">
                       Yes, you can book appointments through our online booking
@@ -352,7 +351,7 @@
                     id="collapseFive1"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFive1"
-                    data-bs-parent="#wivanaAccordion1"
+                    data-bs-parent="#Key RemediesAccordion1"
                   >
                     <div class="accordion-body">
                       Ayurveda is a traditional system of medicine from India
@@ -379,7 +378,7 @@
                     id="collapseSix1"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingSix1"
-                    data-bs-parent="#wivanaAccordion1"
+                    data-bs-parent="#Key RemediesAccordion1"
                   >
                     <div class="accordion-body">
                       Yes, we offer treatments suitable for all ages, from
@@ -410,7 +409,7 @@
                 </div>
                 <div class="title-about c-semi-black">About Company</div>
               </div>
-              <div class="accordion mt-5" id="wivanaAccordion2">
+              <div class="accordion mt-5" id="Key RemediesAccordion2">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne2">
                     <button
@@ -421,14 +420,14 @@
                       aria-expanded="true"
                       aria-controls="collapseOne2"
                     >
-                      How can I schedule a consultation with Wivana?
+                      How can I schedule a consultation with Key Remedies?
                     </button>
                   </h2>
                   <div
                     id="collapseOne2"
                     class="accordion-collapse collapse show"
                     aria-labelledby="headingOne2"
-                    data-bs-parent="#wivanaAccordion2"
+                    data-bs-parent="#Key RemediesAccordion2"
                   >
                     <div class="accordion-body">
                       You can schedule a consultation by visiting our website
@@ -455,7 +454,7 @@
                     id="collapseTwo2"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingTwo2"
-                    data-bs-parent="#wivanaAccordion2"
+                    data-bs-parent="#Key RemediesAccordion2"
                   >
                     <div class="accordion-body">
                       Ayurvedic massage helps to detoxify the body, improve
@@ -482,7 +481,7 @@
                     id="collapseThree2"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingThree2"
-                    data-bs-parent="#wivanaAccordion2"
+                    data-bs-parent="#Key RemediesAccordion2"
                   >
                     <div class="accordion-body">
                       Yes, we offer customized packages for regular wellness
@@ -502,14 +501,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFour2"
                     >
-                      Are Wivana's products organic?
+                      Are Key Remedies's products organic?
                     </button>
                   </h2>
                   <div
                     id="collapseFour2"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFour2"
-                    data-bs-parent="#wivanaAccordion2"
+                    data-bs-parent="#Key RemediesAccordion2"
                   >
                     <div class="accordion-body">
                       Yes, we use organic, ethically sourced ingredients in our
@@ -529,14 +528,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFive2"
                     >
-                      Can I get a gift card for Wivana's services?
+                      Can I get a gift card for Key Remedies's services?
                     </button>
                   </h2>
                   <div
                     id="collapseFive2"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFive2"
-                    data-bs-parent="#wivanaAccordion2"
+                    data-bs-parent="#Key RemediesAccordion2"
                   >
                     <div class="accordion-body">
                       Yes, we offer gift cards that can be purchased online or
@@ -563,7 +562,7 @@
                     id="collapseSix2"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingSix2"
-                    data-bs-parent="#wivanaAccordion2"
+                    data-bs-parent="#Key RemediesAccordion2"
                   >
                     <div class="accordion-body">
                       During your first visit, our practitioners will assess
@@ -595,7 +594,7 @@
                 </div>
                 <div class="title-about c-semi-black">About Ayurveda</div>
               </div>
-              <div class="accordion mt-5" id="wivanaAccordion3">
+              <div class="accordion mt-5" id="Key RemediesAccordion3">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne3">
                     <button
@@ -606,17 +605,17 @@
                       aria-expanded="true"
                       aria-controls="collapseOne3"
                     >
-                      What is Wivana’s philosophy on holistic healing?
+                      What is Key Remedies’s philosophy on holistic healing?
                     </button>
                   </h2>
                   <div
                     id="collapseOne3"
                     class="accordion-collapse collapse show"
                     aria-labelledby="headingOne3"
-                    data-bs-parent="#wivanaAccordion3"
+                    data-bs-parent="#Key RemediesAccordion3"
                   >
                     <div class="accordion-body">
-                      Wivana’s philosophy is rooted in the ancient practices of
+                      Key Remedies’s philosophy is rooted in the ancient practices of
                       Ayurveda, focusing on achieving balance in the mind, body,
                       and spirit through personalized holistic treatments.
                     </div>
@@ -633,17 +632,17 @@
                       aria-expanded="false"
                       aria-controls="collapseTwo3"
                     >
-                      Does Wivana offer wellness retreats?
+                      Does Key Remedies offer wellness retreats?
                     </button>
                   </h2>
                   <div
                     id="collapseTwo3"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingTwo3"
-                    data-bs-parent="#wivanaAccordion3"
+                    data-bs-parent="#Key RemediesAccordion3"
                   >
                     <div class="accordion-body">
-                      Yes, Wivana organizes wellness retreats that combine
+                      Yes, Key Remedies organizes wellness retreats that combine
                       Ayurvedic therapies, meditation, yoga, and personalized
                       consultations for a rejuvenating experience.
                     </div>
@@ -667,7 +666,7 @@
                     id="collapseThree3"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingThree3"
-                    data-bs-parent="#wivanaAccordion3"
+                    data-bs-parent="#Key RemediesAccordion3"
                   >
                     <div class="accordion-body">
                       For your first session, please bring comfortable clothing,
@@ -694,10 +693,10 @@
                     id="collapseFour3"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFour3"
-                    data-bs-parent="#wivanaAccordion3"
+                    data-bs-parent="#Key RemediesAccordion3"
                   >
                     <div class="accordion-body">
-                      Yes, Wivana offers virtual consultations for clients who
+                      Yes, Key Remedies offers virtual consultations for clients who
                       are unable to visit our wellness center in person,
                       ensuring you receive expert guidance from the comfort of
                       your home.
@@ -722,7 +721,7 @@
                     id="collapseFive3"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFive3"
-                    data-bs-parent="#wivanaAccordion3"
+                    data-bs-parent="#Key RemediesAccordion3"
                   >
                     <div class="accordion-body">
                       We accept various payment methods including credit/debit
@@ -749,7 +748,7 @@
                     id="collapseSix3"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingSix3"
-                    data-bs-parent="#wivanaAccordion3"
+                    data-bs-parent="#Key RemediesAccordion3"
                   >
                     <div class="accordion-body">
                       Results vary depending on individual health conditions and
@@ -775,8 +774,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -972,5 +971,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/faqs.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:25 GMT -->
 </html>
