--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:43:30 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home - Wivana</title>
+    <title>Home - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -55,7 +54,7 @@
           <div class="container-lg d-flex">
             <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
               <img
-                src="img/wivana-logo-dark.png"
+                src="img/keyremedies-logo-dark.png"
                 alt="Brand Logo"
                 width="166"
                 height="41"
@@ -194,15 +193,15 @@
               <span class="icon-circle-17"
                 ><i class="fa-solid fa-plus"></i></span
               ><span class="ms-2 philosopher fs-14"
-                >WiVANA - AYURVEDIC SPA AND WELLNESS</span
+                >Key Remedies - AYURVEDIC SPA AND WELLNESS</span
               >
             </div>
             <h1 class="hero-title mt-3 mb-5">
-              Experience Holistic Healing and Serenity with Ayurveda at Wivana
+              Experience Holistic Healing and Serenity with Ayurveda at Key Remedies
             </h1>
             <div>
               <p class="lato fs-16 c-silver hero-subtitle">
-                Experience the transformative power of Ayurveda at Wivana--your
+                Experience the transformative power of Ayurveda at Key Remedies--your
                 sanctuary for holistic wellness, rejuvenation, and inner peace
               </p>
             </div>
@@ -238,7 +237,7 @@
                 </div>
                 <div>
                   <img
-                    src="img/wivana-testi.png"
+                    src="img/Key Remedies-testi.png"
                     class="testimonial-circle"
                     alt="testimonial"
                   />
@@ -359,7 +358,7 @@
                 </div>
               </div>
               <span class="text-grey"
-                >At Wivana, we embrace authentic Ayurveda to nurture holistic
+                >At Key Remedies, we embrace authentic Ayurveda to nurture holistic
                 wellness, empowering you to find balance and rejuvenation in
                 life</span
               >
@@ -414,7 +413,7 @@
               <img src="icon/testimonial-icon.png" alt="testimonial quote" />
             </div>
             <p class="fs-22 lato c-silver text-center ceo-quote mt-3 mb-4">
-              At Wivana, we're dedicated to helping you achieve balance,
+              At Key Remedies, we're dedicated to helping you achieve balance,
               healing, and peace through personalized Ayurvedic care for mind,
               body, and spirit
             </p>
@@ -428,7 +427,7 @@
               />
             </div>
             <p class="fs-16 lato c-silver text-center mt-2 mt-md-4 fade-in">
-              CEO of Wivana
+              CEO of Key Remedies
             </p>
           </div>
         </div>
@@ -679,7 +678,7 @@
             </div>
           </div>
           <div class="text-grey fade-in">
-            Discover the transformative power of Ayurveda at Wivana, where each
+            Discover the transformative power of Ayurveda at Key Remedies, where each
             personalized treatment is designed to restore balance, promote
             healing, and enhance your overall well-being for a vibrant, healthy
             life
@@ -811,7 +810,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Wivana’s personalized care is unmatched. Each treatment
+                        Key Remedies’s personalized care is unmatched. Each treatment
                         is tailored to my wellness needs, leaving me relaxed and
                         revitalized. The atmosphere is calming, and the staff is
                         attentive, making every visit special
@@ -852,7 +851,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Wivana’s personalized care is unmatched. Each treatment
+                        Key Remedies’s personalized care is unmatched. Each treatment
                         is tailored to my wellness needs, leaving me relaxed and
                         revitalized. The atmosphere is calming, and the staff is
                         attentive, making every visit special
@@ -895,7 +894,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        From the moment I stepped in, I felt peaceful. Wivana’s
+                        From the moment I stepped in, I felt peaceful. Key Remedies’s
                         Ayurvedic therapies have helped me restore balance in my
                         life, reducing stress and improving my overall health.
                         Truly a life-changing experience
@@ -936,7 +935,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Wivana’s Panchakarma detox was exactly what I needed.
+                        Key Remedies’s Panchakarma detox was exactly what I needed.
                         After the treatment, I felt lighter, more energized, and
                         mentally clear. It’s a transformative experience that I
                         would gladly recommend to everyone
@@ -994,7 +993,7 @@
             </div>
             <div class="title-about c-semi-black">Our Spa Experience</div>
             <div class="subtext-showcase">
-              Discover the essence of Wivana Spa, where every image tells a
+              Discover the essence of Key Remedies Spa, where every image tells a
               story of healing and rejuvenation
             </div>
           </div>
@@ -1067,7 +1066,7 @@
                   Frequently Asked Questions
                 </div>
               </div>
-              <div class="accordion mt-5" id="wivanaAccordion">
+              <div class="accordion mt-5" id="Key RemediesAccordion">
                 <div class="accordion-item">
                   <span class="accordion-header" id="headingOne">
                     <button
@@ -1078,17 +1077,17 @@
                       aria-expanded="true"
                       aria-controls="collapseOne"
                     >
-                      What is Wivana’s approach to wellness?
+                      What is Key Remedies’s approach to wellness?
                     </button>
                   </span>
                   <div
                     id="collapseOne"
                     class="accordion-collapse collapse show"
                     aria-labelledby="headingOne"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
-                      Wivana embraces the ancient principles of Ayurveda,
+                      Key Remedies embraces the ancient principles of Ayurveda,
                       offering personalized treatments that balance the mind,
                       body, and spirit through natural remedies and holistic
                       practices.
@@ -1106,17 +1105,17 @@
                       aria-expanded="false"
                       aria-controls="collapseTwo"
                     >
-                      What services does Wivana offer?
+                      What services does Key Remedies offer?
                     </button>
                   </span>
                   <div
                     id="collapseTwo"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingTwo"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
-                      Wivana offers a range of services including Abhyanga
+                      Key Remedies offers a range of services including Abhyanga
                       massage, Shirodhara therapy, Panchakarma detox programs,
                       Ayurvedic facials, and wellness consultations, all
                       designed to promote overall health.
@@ -1141,7 +1140,7 @@
                     id="collapseThree"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingThree"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       Yes, we recommend a consultation prior to your first
@@ -1162,14 +1161,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFour"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseFour"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFour"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -1189,14 +1188,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFive"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseFive"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFive"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -1216,14 +1215,14 @@
                       aria-expanded="false"
                       aria-controls="collapseSix"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseSix"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingSix"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -1254,7 +1253,7 @@
                 <span class="ms-2 philosopher fs-14 c-main">BLOG POST</span>
               </div>
               <div class="title-about c-semi-black">
-                Latest Articles From Wivana
+                Latest Articles From Key Remedies
               </div>
             </div>
             <div class="d-flex justify-content-end align-items-end">
@@ -1361,8 +1360,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -1558,5 +1557,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:43:52 GMT -->
 </html>
