--- a/services.html
+++ b/services.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:13 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services - Wivana</title>
+    <title>Services - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -53,7 +52,7 @@
         <div class="container-lg d-flex">
           <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
             <img
-              src="img/wivana-logo-dark.png"
+              src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
               width="166"
               height="41"
@@ -222,7 +221,7 @@
             </div>
           </div>
           <div class="text-grey fade-in">
-            Discover the transformative power of Ayurveda at Wivana, where each
+            Discover the transformative power of Ayurveda at Key Remedies, where each
             personalized treatment is designed to restore balance, promote
             healing, and enhance your overall well-being for a vibrant, healthy
             life
@@ -504,7 +503,7 @@
                   Frequently Asked Questions
                 </div>
               </div>
-              <div class="accordion mt-5" id="wivanaAccordion">
+              <div class="accordion mt-5" id="Key RemediesAccordion">
                 <div class="accordion-item">
                   <span class="accordion-header" id="headingOne">
                     <button
@@ -515,17 +514,17 @@
                       aria-expanded="true"
                       aria-controls="collapseOne"
                     >
-                      What is Wivana’s approach to wellness?
+                      What is Key Remedies’s approach to wellness?
                     </button>
                   </span>
                   <div
                     id="collapseOne"
                     class="accordion-collapse collapse show"
                     aria-labelledby="headingOne"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
-                      Wivana embraces the ancient principles of Ayurveda,
+                      Key Remedies embraces the ancient principles of Ayurveda,
                       offering personalized treatments that balance the mind,
                       body, and spirit through natural remedies and holistic
                       practices.
@@ -543,17 +542,17 @@
                       aria-expanded="false"
                       aria-controls="collapseTwo"
                     >
-                      What services does Wivana offer?
+                      What services does Key Remedies offer?
                     </button>
                   </span>
                   <div
                     id="collapseTwo"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingTwo"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
-                      Wivana offers a range of services including Abhyanga
+                      Key Remedies offers a range of services including Abhyanga
                       massage, Shirodhara therapy, Panchakarma detox programs,
                       Ayurvedic facials, and wellness consultations, all
                       designed to promote overall health.
@@ -578,7 +577,7 @@
                     id="collapseThree"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingThree"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       Yes, we recommend a consultation prior to your first
@@ -599,14 +598,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFour"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseFour"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFour"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -626,14 +625,14 @@
                       aria-expanded="false"
                       aria-controls="collapseFive"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseFive"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingFive"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -653,14 +652,14 @@
                       aria-expanded="false"
                       aria-controls="collapseSix"
                     >
-                      How can I book a treatment at Wivana?
+                      How can I book a treatment at Key Remedies?
                     </button>
                   </span>
                   <div
                     id="collapseSix"
                     class="accordion-collapse collapse"
                     aria-labelledby="headingSix"
-                    data-bs-parent="#wivanaAccordion"
+                    data-bs-parent="#Key RemediesAccordion"
                   >
                     <div class="accordion-body">
                       You can book your treatment by visiting our website and
@@ -685,8 +684,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -882,5 +881,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/services.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:13 GMT -->
 </html>
