--- a/testimonials.html
+++ b/testimonials.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/testimonials.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:25 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Testimonials - Wivana</title>
+    <title>Testimonials - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -51,7 +50,7 @@
         <div class="container-lg d-flex">
           <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
             <img
-              src="img/wivana-logo-dark.png"
+              src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
               width="166"
               height="41"
@@ -233,7 +232,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Wivana’s personalized care is unmatched. Each treatment
+                        Key Remedies’s personalized care is unmatched. Each treatment
                         is tailored to my wellness needs, leaving me relaxed and
                         revitalized. The atmosphere is calming, and the staff is
                         attentive, making every visit special
@@ -274,7 +273,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Wivana’s personalized care is unmatched. Each treatment
+                        Key Remedies’s personalized care is unmatched. Each treatment
                         is tailored to my wellness needs, leaving me relaxed and
                         revitalized. The atmosphere is calming, and the staff is
                         attentive, making every visit special
@@ -317,7 +316,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        From the moment I stepped in, I felt peaceful. Wivana’s
+                        From the moment I stepped in, I felt peaceful. Key Remedies’s
                         Ayurvedic therapies have helped me restore balance in my
                         life, reducing stress and improving my overall health.
                         Truly a life-changing experience
@@ -358,7 +357,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Wivana’s Panchakarma detox was exactly what I needed.
+                        Key Remedies’s Panchakarma detox was exactly what I needed.
                         After the treatment, I felt lighter, more energized, and
                         mentally clear. It’s a transformative experience that I
                         would gladly recommend to everyone
@@ -401,7 +400,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Wivana offers the perfect combination of ancient
+                        Key Remedies offers the perfect combination of ancient
                         Ayurvedic wisdom and modern comfort. The therapies not
                         only heal the body but also bring mental clarity and
                         spiritual balance. I always leave feeling renewed
@@ -442,7 +441,7 @@
                   <div class="card-body bg-semi-white">
                     <div>
                       <p class="text-grey">
-                        Every visit to Wivana feels like a retreat. The serene
+                        Every visit to Key Remedies feels like a retreat. The serene
                         environment, combined with the tailored treatments,
                         brings a sense of balance and peace that lasts far
                         beyond the session. A must-try experience
@@ -612,7 +611,7 @@
             </div>
             <div class="title-about c-semi-black">Our Spa Experience</div>
             <div class="subtext-showcase">
-              Discover the essence of Wivana Spa, where every image tells a
+              Discover the essence of Key Remedies Spa, where every image tells a
               story of healing and rejuvenation
             </div>
           </div>
@@ -674,8 +673,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -871,5 +870,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/testimonials.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:26 GMT -->
 </html>
