--- a/packages.html
+++ b/packages.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/packages.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:20 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Packages - Wivana</title>
+    <title>Packages - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -53,7 +52,7 @@
         <div class="container-lg d-flex">
           <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
             <img
-              src="img/wivana-logo-dark.png"
+              src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
               width="166"
               height="41"
@@ -545,7 +544,7 @@
               <img src="icon/testimonial-icon.png" alt="testimonial quote" />
             </div>
             <p class="fs-22 lato c-silver text-center ceo-quote mt-3 mb-4">
-              At Wivana, we're dedicated to helping you achieve balance,
+              At Key Remedies, we're dedicated to helping you achieve balance,
               healing, and peace through personalized Ayurvedic care for mind,
               body, and spirit
             </p>
@@ -559,7 +558,7 @@
               />
             </div>
             <p class="fs-16 lato c-silver text-center mt-2 mt-md-4">
-              CEO of Wivana
+              CEO of Key Remedies
             </p>
           </div>
         </div>
@@ -581,7 +580,7 @@
             </div>
             <div class="title-about c-semi-black">Our Spa Experience</div>
             <div class="subtext-showcase">
-              Discover the essence of Wivana Spa, where every image tells a
+              Discover the essence of Key Remedies Spa, where every image tells a
               story of healing and rejuvenation
             </div>
           </div>
@@ -643,8 +642,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -840,5 +839,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/packages.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:20 GMT -->
 </html>
