--- a/team.html
+++ b/team.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from wivana-html.zaderonstudio.com/team.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:13 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Team - Wivana</title>
+    <title>Team - Key Remedies</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/css/fontawesome.css" rel="stylesheet" />
@@ -51,7 +50,7 @@
         <div class="container-lg d-flex">
           <a class="navbar-brand ms-0 ms-sm-3 ms-lg-0" href="index-2.html">
             <img
-              src="img/wivana-logo-dark.png"
+              src="img/keyremedies-logo-dark.png"
               alt="Brand Logo"
               width="166"
               height="41"
@@ -494,7 +493,7 @@
                   </div>
                   <div class="d-flex gap-2 py-5">
                     <a
-                      href="https://www.facebook.com/wivana"
+                      href="https://www.facebook.com/Key Remedies"
                       class="icon-circle-32"
                       target="_blank"
                     >
@@ -651,7 +650,7 @@
             </div>
             <div class="title-about c-semi-black">Our Spa Experience</div>
             <div class="subtext-showcase">
-              Discover the essence of Wivana Spa, where every image tells a
+              Discover the essence of Key Remedies Spa, where every image tells a
               story of healing and rejuvenation
             </div>
           </div>
@@ -713,8 +712,8 @@
               <div>
                 <a href="index-2.html">
                   <img
-                    src="img/wivana-logo-dark.png"
-                    alt="wivana logo"
+                    src="img/keyremedies-logo-dark.png"
+                    alt="Key Remedies logo"
                     class="footer-logo"
                   />
                 </a>
@@ -910,5 +909,4 @@
     <script src="js/index.js"></script>
   </body>
 
-<!-- Mirrored from wivana-html.zaderonstudio.com/team.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:44:20 GMT -->
 </html>
